--- a/frontend/admin.css
+++ b/frontend/admin.css
@@ -119,7 +119,7 @@ th {
 
 
 
-.edit-btn, .delete-btn, .complete-btn {
+.edit-btn, .delete-btn, .complete-btn, .view-btn, .add-btn {
   padding: 6px 12px;
   border: none;
   border-radius: 6px;
@@ -144,6 +144,10 @@ th {
     background-color: green;
 }
 
+.view-btn {
+  background-color: aquamarine;
+}
+
 .edit-btn:hover {
     font-weight: bold;
     cursor: pointer;
@@ -158,6 +162,29 @@ th {
     font-weight: bold;
     cursor: pointer;
 }
+
+.view-btn:hover {
+  font-weight: bold;
+  cursor: pointer;
+}
+
+
+.add-product-btn {
+  background-color: bisque;
+  padding:10px;
+  font-size: 10px;
+}
+
+.add-product-btn:hover {
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.add-img-btn:hover {
+  cursor: pointer;
+  font-weight: bold;
+}
+
 .form-container {
     display: none;
     background: #f1f1f1;
